// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<View>
  <Text>
    circle-outline
  </Text>
</View>
`;

exports[`Checkbox renders correctly when checked 1`] = `
<View>
  <Text>
    check-circle
  </Text>
</View>
`;
